# puffer_red

./: .gitignore  Makefile  README.md  compile_commands.json  pyproject.toml  setup.py  test.py
config/: default.ini  pokered.ini
pokered/: README.md  __init__.py  binding.c  pokered.c  pokered.h  pokered.py  torch.py
pokered/includes/: battle.h  events.h  mgba_wrapper.h  optim.h
pokered/states/: nballs.ss1  new_start.ss1  pre-choice.state
pufferlib/: __init__.py  pufferl.py
pufferlib/extensions/: __init__.py
scripts/: dashboard.sh  debug.sh  launch_webserver.sh
