[project]
name = "pokered"
version = "0.1.0"
description = "Pokemon Red Reinforcement Learning with PufferLib"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies
    "setuptools",
    "numpy<2.0",
    "gym==0.23",
    "gymnasium==0.29.1",
    "pettingzoo==1.24.1",
    "shimmy[gym-v21]",
    # Training dependencies (pufferlib[train] equivalent)
    "torch",
    "psutil",
    "pynvml",
    "rich",
    "rich_argparse",
    "imageio",
    "pyro-ppl",
    "heavyball",
    "neptune",
    "wandb",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]


[project.scripts]
mini = "pufferlib.pufferl:main"

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy<2.0", "torch"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pufferlib", "pufferlib.extensions", "pokered"]

[tool.setuptools.package-data]
"*" = ["config/**/*.ini", "states/*.state", "states/*.ss1"]

[tool.uv]
no-build-isolation-package = ["torch"]
